--- a/styles.css
+++ b/styles.css
@@ -80,12 +80,12 @@ em {
 }
 
 .page-title {
-  justify-self: end;
+  justify-self: start;
   font-size: 1.6rem;
   font-weight: 700;
   color: var(--color-primary);
   letter-spacing: 0.05em;
-  margin-left: 0.75rem;
+  margin-left: 0;
 }
 
 .logo__icon {
@@ -139,8 +139,9 @@ em {
 }
 
 .nav--links {
-  justify-self: end;
-  margin-left: 1.5rem;
+  justify-self: start;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
 }
 
 .nav__link {
